[project]
name = "sixg-sim"
version = "1.5.0"
description = "6GSimo 1.5: packet-level discrete-event 6G core network simulator"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
sixg-demo = "sixg_sim.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sixg_sim"]
